# okx_rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.en.md  README.md  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
crates/okx/: Cargo.toml
crates/okx-core/: Cargo.toml
crates/okx-core/benches/: signer.rs
crates/okx-core/src/: config.rs  credentials.rs  error.rs  lib.rs  signer.rs  time_provider.rs
crates/okx-core/src/types/: account.rs  common.rs  convert.rs  funding.rs  market.rs  mod.rs  trade.rs
crates/okx-core/tests/: test_common.rs  test_core.rs  test_market.rs
crates/okx-py/: Cargo.toml  README.en.md  README.md  README.zh.md  TESTING.md  pyproject.toml  test.sh
crates/okx-py/examples/: async_usage.py  basic_usage.py  private_balance.py  public_quickstart.py  websocket_usage.py  ws_ticker_once.py
crates/okx-py/python/okx_py/: __init__.py  okx_py.pyi
crates/okx-py/src/: account.rs  async_client.rs  block_rfq.rs  broker.rs  client.rs  convert.rs  copy_trading.rs  finance.rs  funding.rs  grid.rs  lib.rs  public.rs  raw.rs  response_meta.rs  spread.rs  subaccount.rs  time_sync.rs  trading_data.rs  types.rs  ws_client.rs
crates/okx-py/src/async_client/: account.rs  block_rfq.rs  broker.rs  convert.rs  copy_trading.rs  finance.rs  funding.rs  grid.rs  market.rs  mod.rs  public.rs  raw.rs  spread.rs  subaccount.rs  trade.rs  trading_data.rs
crates/okx-py/src/client/: account.rs  block_rfq.rs  broker.rs  convert.rs  copy_trading.rs  finance.rs  funding.rs  grid.rs  market.rs  mod.rs  public.rs  raw.rs  spread.rs  subaccount.rs  trade.rs  trading_data.rs
crates/okx-py/tests/: conftest.py  test_api_surface.py  test_async.py  test_clients.py  test_concurrent.py  test_data_types.py  test_errors.py  test_export_contract.py  test_new_bindings.py  test_rest_coverage.py  test_sync_client.py  test_types.py  test_validation.py  test_websocket.py  test_websocket_advanced.py
crates/okx-py/tests/integration/: conftest.py  test_rest_private.py  test_rest_public.py  test_ws_public.py
crates/okx-rest/: Cargo.toml
crates/okx-rest/benches/: api.rs
crates/okx-rest/examples/: rest_basic.rs  spot_price.rs  swap_price.rs  ws_public.rs  ws_swap.rs
crates/okx-rest/src/: client.rs  lib.rs  response_meta.rs  time_sync.rs
crates/okx-rest/src/api/: account.rs  block_rfq.rs  broker.rs  convert.rs  copy_trading.rs  finance.rs  funding.rs  grid.rs  market.rs  mod.rs  public.rs  spread.rs  status.rs  subaccount.rs  trade.rs  trading_data.rs
crates/okx-rest/tests/: test_low_coverage_apis.rs  test_offline_account_funding_trade.rs  test_private_api.rs  test_python_sdk_paths.rs  test_rest.rs
crates/okx-ws/: Cargo.toml
crates/okx-ws/benches/: websocket.rs
crates/okx-ws/src/: channel.rs  client.rs  lib.rs  message.rs  reconnect.rs
crates/okx-ws/tests/: test_channel.rs  test_client_logic.rs  test_error_handling.rs  test_reconnect_key.rs  test_ws.rs
crates/okx/src/: lib.rs
docs/: README.md  coverage.md
docs/en/: python.md  release.md  rust-api.md
docs/zh/: python.md  release.md  rust-api.md
examples/: rest_basic.rs  ws_public.rs
openspec/: project.md
openspec/changes/add-okx-rust-sdk/: tasks.md
openspec/changes/archive/2025-12-03-add-okx-advanced-apis/: coverage.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-03-add-okx-advanced-apis/specs/advanced-apis/: spec.md
openspec/changes/archive/2025-12-12-update-okx-py-rest-coverage/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-12-update-okx-py-rest-coverage/specs/python-binding/: spec.md
openspec/changes/archive/2025-12-13-add-okx-rust-sdk/: design.md  module_audit.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-13-add-okx-rust-sdk/specs/okx-core/: spec.md
openspec/changes/archive/2025-12-13-add-okx-rust-sdk/specs/okx-python-binding/: spec.md
openspec/changes/archive/2025-12-13-add-okx-rust-sdk/specs/okx-rest-api/: spec.md
openspec/changes/archive/2025-12-13-add-okx-rust-sdk/specs/okx-websocket/: spec.md
openspec/changes/archive/2025-12-13-refactor-okx-py-binding-modularization/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-13-refactor-okx-py-binding-modularization/specs/python-binding/: spec.md
openspec/changes/archive/2025-12-13-update-python-okx-alignment/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-13-update-python-okx-alignment/specs/advanced-apis/: spec.md
openspec/changes/archive/2025-12-13-update-python-okx-alignment/specs/okx-core/: spec.md
openspec/changes/archive/2025-12-13-update-python-okx-alignment/specs/okx-rest-api/: spec.md
openspec/changes/archive/2025-12-13-update-python-okx-alignment/specs/python-binding/: spec.md
openspec/changes/archive/2025-12-16-add-time-sync-and-error-enhancement/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-16-add-time-sync-and-error-enhancement/specs/okx-core/: spec.md
openspec/changes/archive/2025-12-16-add-time-sync-and-error-enhancement/specs/okx-rest-api/: spec.md
openspec/changes/archive/2025-12-16-add-time-sync-and-error-enhancement/specs/okx-websocket/: spec.md
openspec/specs/advanced-apis/: spec.md
openspec/specs/okx-core/: spec.md
openspec/specs/okx-python-binding/: spec.md
openspec/specs/okx-rest-api/: spec.md
openspec/specs/okx-websocket/: spec.md
openspec/specs/python-binding/: spec.md
scripts/: cov-html.sh  generate_async_bindings.py
