[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/okx_rs"
keywords = ["okx", "crypto", "trading", "exchange", "api"]
categories = ["api-bindings", "asynchronous", "web-programming"]

[workspace.dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# WebSocket
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 错误处理
thiserror = "2"

# 加密签名
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 日志
tracing = "0.1"

# 工具
url = "2"

# Python 绑定 (仅 okx-py 使用)
# multiple-pymethods: 允许同一 #[pyclass] 有多个 #[pymethods] 块，用于按业务域拆分方法
pyo3 = { version = "0.27", features = ["extension-module", "multiple-pymethods", "abi3-py39"] }

# 内部 crates
okx-core = { path = "crates/okx-core" }
okx-rest = { path = "crates/okx-rest" }
okx-ws = { path = "crates/okx-ws" }

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
