[package]
name = "okx-core"
description = "Core types, authentication, and utilities for OKX API"
readme = "../../README.en.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "signer"
harness = false

[lints]
workspace = true
