[package]
name = "okx-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for OKX SDK"
readme = "README.en.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/okx_rs"
keywords = ["okx", "exchange", "api", "python", "pyo3"]
categories = ["api-bindings"]

[lib]
name = "okx_py"
crate-type = ["cdylib"]
# 禁用 Rust 测试（Python 测试通过 pytest 运行）
test = false
bench = false
doctest = false

[dependencies]
okx-core = { path = "../okx-core" }
okx-rest = { path = "../okx-rest" }
okx-ws = { path = "../okx-ws" }
pyo3 = { workspace = true }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.27"
