[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "okx-py"
version = "0.1.0"
description = "High-performance Python bindings for OKX exchange API"
readme = "README.en.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.9"
authors = [
    { name = "OKX Rust SDK Contributors" }
]
keywords = ["okx", "exchange", "trading", "api", "cryptocurrency", "bitcoin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/example/okx-rs"
Repository = "https://github.com/example/okx-rs"
Documentation = "https://github.com/example/okx-rs#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "okx_py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: 依赖网络或真实凭证的集成测试",
]

[tool.mypy]
python_version = "3.9"
strict = true

[dependency-groups]
dev = [
    "maturin>=1.10.2",
    "mypy>=1.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
