[package]
name = "okx-rest"
version = "0.1.0"
edition = "2021"
description = "OKX REST API client"
readme = "../../README.en.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/okx_rs"
keywords = ["okx", "exchange", "api", "rest", "trading"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
okx-core = { path = "../okx-core" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7"
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
futures-util = { workspace = true }
okx-ws = { path = "../okx-ws" }
criterion = "0.5"

[[bench]]
name = "api"
harness = false
